Swagger HTTPS update